--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
+    "@mui/x-data-grid": "^6.0.2",
     "reac": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
