--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@mui/x-data-grid": "^6.0.2",
+    "axios": "^1.3.4",
     "reac": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
