--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@fontsource/roboto": "^4.5.8",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.13",
     "@mui/x-data-grid": "^6.0.2",
     "axios": "^1.3.4",
     "reac": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "router-dom": "^2.2.10"
