--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@mui/material": "^5.11.13",
     "@mui/x-data-grid": "^6.0.2",
     "axios": "^1.3.4",
+    "d3-color": "^3.1.0",
     "reac": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-charts": "^4.0.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
+    "recharts": "^2.5.0",
     "router-dom": "^2.2.10"
   },
   "devDependencies": {
