--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3-color": "^3.1.0",
     "reac": "^0.0.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
