--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^6.0.2",
     "axios": "^1.3.4",
     "d3-color": "^3.1.0",
+    "polynomial-regression": "^1.1.0",
     "reac": "^0.0.0",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
